--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -42,7 +42,7 @@
     {{ printf `<link href="%s" rel="%s" type="%s" title="%s" />` .Permalink .Rel .MediaType.Type $.Site.Title | safeHTML }}
   {{ end }}
   {{ end }}
-  {{ if .Site.GoogleAnalytics }}
+  {{ if .Site.Config.Services.GoogleAnalytics }}
     {{ template "_internal/google_analytics.html" . }}
   {{ end }}
 </head>
